# AgentsTV

./: .gitignore  CHANGELOG.md  Dockerfile  QUICKSTART.md  README.md  launch-posts.md  pyproject.toml
.claude/: settings.local.json
agent_replay/: __init__.py  __main__.py  llm.py  models.py  parser.py  scanner.py  server.py  tui.py
agentstv/: __init__.py  __main__.py  llm.py  parser.py  scanner.py  server.py
agentstv/web/: app.js  chat.js  clips.js  dashboard.js  index.html  master.js  overlay.css  overlay.js  pixelEngine.js  replay.js  session.js  settings.js  state.js  style.css
examples/: sample.jsonl  with-subagents.jsonl
examples/738fb19c-c441-4c39-9a4f-636739324d89/subagents/: agent-a3b8a9f.jsonl  agent-a913c05.jsonl  agent-a9d40fc.jsonl  agent-af6fd35.jsonl
tests/: conftest.py  test_llm.py  test_parser.py  test_scanner.py  test_server.py
tests/e2e/: conftest.py  test_clips.py  test_dashboard.py  test_master.py  test_overlay.py  test_replay.py  test_session.py  test_shortcuts.py  test_theme.py
web/: alerts.js  app.js  chat.js  dashboard.js  index.html  master.js  overlay.html  overlay.js  pixelEngine.js  replay.js  router.js  session.js  settings.js  shortcuts.js  sound.js  state.js  style.css  theme.js  utils.js
