[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-replay"
version = "0.1.0"
description = "CLI Agent Visualizer — replay Claude Code sessions as animated TUI scenes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
]

[project.scripts]
agent-replay = "agent_replay.tui:main"
